--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ social:
   dribbble:
   facebook:
   flickr:
-  github: frankova
+  github: frankovacevich
   google_plus:
   instagram:
   keybase:
